# TDSS

./: .dockerignore  .gitignore  DOCUMENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt
app/application/: dss_engine.py  traffic_engine.py
app/data/: interchange_data.py
app/domain/: geometry.py  models.py
app/infrastructure/: generators.py  metrics.py  svg_parser.py
app/ui/: charts.py  main.py
app/ui/visualizations/: cad_renderer.py  radar_chart.py
backend/: Dockerfile  main.py  routes.py  schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  i18n.js  main.js  style.css
frontend/src/components/: BlueprintGallery.vue  DssEvaluation.vue  LeafletMap.vue  LocaleSwitcher.vue  Methodology.vue  PlotlyChart.vue  Sidebar.vue  TabNav.vue
frontend/src/composables/: useDSS.js  useLocale.js  useTheme.js
frontend/src/locales/: backendKeys.js  en.json  uk.json
legacy/: README.md
legacy/streamlit_ui/: main.py
tests/: test_geometry.py
