[tool.poetry]
name = "tdss"
version = "0.1.0"
description = "Transport Interchange Decision Support System with High-Fidelity 2D Parametric Visualization"
authors = ["Vitalii"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26"
scipy = "^1.12"
shapely = "^2.0"
pydantic = "^2.6"
pydeck = "^0.9"
streamlit = "^1.31"
streamlit-shadcn-ui = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
